NB_Bouncr@startuml

title __BOUNCER's Class Diagram__\n

  package Bouncer {
    interface Bouncable {
        {abstract} + draw()
        {abstract} + move()
        {abstract} + getRenderer()
        {abstract} + getColor()
        {abstract} + getShape()
    }
  }
  

  package Bouncer {
    class BounceApp {
        - bouncers : LinkedList<Bouncable>
        - mainAction : ActionListener
        - NB_CIRCLE : int
        - NB_SQUARE : int
        - MAXSHAPESIZE : int
        - NBSHAPETOGENERATE : int
        + BounceApp()
        + loop()
        {static} + main()
    }
  }
  

  package Bouncer {
    abstract class Bouncer {
        - width : int
        - height : int
        - position : Point
        - velocityPoint : Point
        + Bouncer()
        + getPositionX()
        + getPositionY()
        + getWidth()
        + getHeigth()
        + draw()
        + move()
    }
  }
  

  package Bouncer {
    abstract class Circle {
        + Circle()
        + getShape()
    }
  }
  

  package Bouncer {
    abstract class Square {
        + Square()
        + getShape()
    }
  }
  

  BounceApp o-- Displayer : displayer
  Bouncer -up-|> Bouncable
  Circle -up-|> Bouncer
  Square -up-|> Bouncer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
